[project]
name = "wiki-core"
version = "0.1.0"
description = "Deterministic LLM Wiki engine and MCP server for the erik-knowledge-base vault."
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.9",
    "fastembed>=0.8.0",
    "mcp[cli]>=1.28.1",
    "tqdm>=4.68.3",
]

[project.scripts]
wiki-search = "wiki_core.wiki_search:main"
wiki-verify = "wiki_core.verify_wiki:main"
wiki-pages = "wiki_core.wiki_pages:main"
wiki-plan = "wiki_core.ingest_plan:main"
wiki-mcp = "wiki_core.mcp_server:main"
wiki-init = "wiki_core.wiki_init:main"
wiki-doctor = "wiki_core.wiki_init:doctor_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_core"]
